remote stack inspection

--- a/arch/arm/configs/hammerhead_defconfig
+++ b/arch/arm/configs/hammerhead_defconfig
@@ -544,6 +544,7 @@ CONFIG_RTC_DRV_QPNP=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_STACK_INSPECTION_CHANNEL=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
